--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link type="image/png" sizes="16x16" rel="icon" href="/icons8-project-16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Vuetify 3</title>
+    <title>ну типа</title>
 </head>
 
 <body>
