fix exams marks + change text main page and titles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link type="image/png" sizes="16x16" rel="icon" href="/icons8-project-16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ну типа</title>
+    <title>Кемеровский Государственный Университет</title>
 </head>
 
 <body>
